# docs/api/swagger.json
@@ -8,8 +8,8 @@
     },
     "basePath": "/api",
     "paths": {
-        "/account/balance": {
-            "post": {
+        "/v1/accounts/balance": {
+            "get": {
                 "consumes": [
                     "application/json"
                 ],
@@ -17,18 +17,23 @@
                     "application/json"
                 ],
                 "tags": [
-                    "account"
+                    "accounts"
                 ],
                 "summary": "Получить инфу о балансе",
                 "parameters": [
                     {
-                        "description": "body",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/account.BalanceInput"
-                        }
+                        "type": "string",
+                        "description": "id сети",
+                        "name": "chainId",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "адрес кошелька",
+                        "name": "address",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -37,7 +42,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/http.apiResponse"
+                                    "$ref": "#/definitions/v1.apiResponse"
                                 },
                                 {
                                     "type": "object",
@@ -53,7 +58,7 @@
                 }
             }
         },
-        "/account/create": {
+        "/v1/accounts/create": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -62,7 +67,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "account"
+                    "accounts"
                 ],
                 "summary": "Получение аккаунта по мнемонику",
                 "parameters": [
@@ -82,7 +87,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/http.apiResponse"
+                                    "$ref": "#/definitions/v1.apiResponse"
                                 },
                                 {
                                     "type": "object",
@@ -98,7 +103,7 @@
                 }
             }
         },
-        "/account/mnemonic": {
+        "/v1/accounts/mnemonic": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -107,7 +112,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "account"
+                    "accounts"
                 ],
                 "summary": "Создание мнемоника",
                 "parameters": [
@@ -127,7 +132,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/http.apiResponse"
+                                    "$ref": "#/definitions/v1.apiResponse"
                                 },
                                 {
                                     "type": "object",
@@ -143,7 +148,7 @@
                 }
             }
         },
-        "/account/restore": {
+        "/v1/accounts/restore": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -152,7 +157,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "account"
+                    "accounts"
                 ],
                 "summary": "Получение аккаунта по ключу",
                 "parameters": [
@@ -172,7 +177,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/http.apiResponse"
+                                    "$ref": "#/definitions/v1.apiResponse"
                                 },
                                 {
                                     "type": "object",
@@ -188,8 +193,8 @@
                 }
             }
         },
-        "/chains/all": {
-            "post": {
+        "/v1/chains": {
+            "get": {
                 "consumes": [
                     "application/json"
                 ],
@@ -197,7 +202,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "chain"
+                    "chains"
                 ],
                 "summary": "Получение данных о сетях",
                 "responses": {
@@ -206,7 +211,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/http.apiResponse"
+                                    "$ref": "#/definitions/v1.apiResponse"
                                 },
                                 {
                                     "type": "object",
@@ -225,7 +230,7 @@
                 }
             }
         },
-        "/transaction/send": {
+        "/v1/transactions/send": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -234,7 +239,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "transaction"
+                    "transactions"
                 ],
                 "summary": "Отправить транзакцию",
                 "parameters": [
@@ -254,7 +259,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/http.apiResponse"
+                                    "$ref": "#/definitions/v1.apiResponse"
                                 },
                                 {
                                     "type": "object",
@@ -270,7 +275,7 @@
                 }
             }
         },
-        "/transaction/send/firebase": {
+        "/v1/transactions/send/firebase": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -279,7 +284,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "transaction"
+                    "transactions"
                 ],
                 "summary": "Отправить транзакцию с подпиской на события тендерминта с пушами в firebase",
                 "parameters": [
@@ -299,7 +304,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/http.apiResponse"
+                                    "$ref": "#/definitions/v1.apiResponse"
                                 },
                                 {
                                     "type": "object",
@@ -315,7 +320,7 @@
                 }
             }
         },
-        "/transaction/simulate": {
+        "/v1/transactions/simulate": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -324,7 +329,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "transaction"
+                    "transactions"
                 ],
                 "summary": "Симуляция транзакции для расчета параметров",
                 "parameters": [
@@ -344,7 +349,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/http.apiResponse"
+                                    "$ref": "#/definitions/v1.apiResponse"
                                 },
                                 {
                                     "type": "object",
@@ -362,17 +367,6 @@
         }
     },
     "definitions": {
-        "account.BalanceInput": {
-            "type": "object",
-            "properties": {
-                "address": {
-                    "type": "string"
-                },
-                "chainId": {
-                    "type": "string"
-                }
-            }
-        },
         "account.BalanceResponse": {
             "type": "object",
             "properties": {
@@ -488,18 +482,6 @@
                 "symbol": {
                     "type": "string"
                 }
-            }
-        },
-        "http.apiResponse": {
-            "type": "object",
-            "properties": {
-                "error": {
-                    "type": "string"
-                },
-                "isSuccess": {
-                    "type": "boolean"
-                },
-                "result": {}
             }
         },
         "transaction.SendInput": {
@@ -620,6 +602,18 @@
                 "lowGasPrice": {
                     "type": "string"
                 }
+            }
+        },
+        "v1.apiResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
+                },
+                "isSuccess": {
+                    "type": "boolean"
+                },
+                "result": {}
             }
         }
     }
